--- a/sourse/pug/blocks/sSearchResult/_sSearchResult.pug
+++ b/sourse/pug/blocks/sSearchResult/_sSearchResult.pug
@@ -162,8 +162,40 @@ mixin sSearchResult2(data)
 		.container.tabs
 			+e.slider--js.swiper(data-aos="fade-up" data-aos-delay="300")
 				.swiper-wrapper.tabs__caption
-					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn.active
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
 						+e.item По тегу
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
+						+e.item Услуги
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
+						+e.item Направления
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
+						+e.item Технологии
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
+						+e.item Подходы
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
+						+e.item Новости
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
+						+e.item Публикации
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
+						+e.item Мероприятия
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn.active
+						+e.item Проекты
+			.tabs__content
+				+e.nothing Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+			.tabs__content
+				+e.nothing Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+			.tabs__content
+				+e.nothing Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+			.tabs__content
+				+e.nothing Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+			.tabs__content
+				+e.nothing Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+			.tabs__content
+				+e.nothing Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+			.tabs__content
+				+e.nothing Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+			.tabs__content
+				+e.nothing Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
 			.tabs__content.active
 				+e.nothing Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
 	// end sSearchResult
