--- a/sourse/pug/pages/15-search-result-2.pug
+++ b/sourse/pug/pages/15-search-result-2.pug
@@ -32,7 +32,7 @@ block pagecontent
 			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
-	+headerSearch('Search').bg-dark
+	+headerSearch2('Search').bg-dark
 	//- +sValueProposition.bg-white.section--vh
 	//- +sNumericalIndicators.bg-dark.section--vh
 	//- +sPrinciples.bg-white.section--vh
