--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -275,11 +275,18 @@
 				max-width: rem(426);
 				margin-left: auto;
 				margin-right: auto;
-				.icon {
+				button {
 					position: absolute;
 					right: 0;
 					top: 50%;
 					transform: translateY(calc(-50% - #{rem(14)}));
+					--bs-btn-padding-x: 0;
+					--bs-btn-padding-y: 0;
+					--bs-btn-border-width: 0;
+					--bs-btn-color: #fff;
+					--bs-btn-hover-color: #{$gray-300};
+				}
+				.icon {
 					font-size: rem(24);
 				}
 				p {
