--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -3,6 +3,7 @@
 	min-height: 100vh;
 	// background-color: #000000;
 	position: relative;
+	overflow: hidden;
 	z-index: 2;
 	display: flex;
 	// overflow: hidden;
