--- a/sourse/pug/blocks/sExpert/_sExpert.scss
+++ b/sourse/pug/blocks/sExpert/_sExpert.scss
@@ -21,6 +21,7 @@
 	}
 	&__slider-wrap {
 		position: relative;
+		padding-bottom: rem(60);
 	}
 	&__slider {
 		overflow: visible;
@@ -174,8 +175,11 @@
 			font-size: rem(13);
 		}
 	}
+	.slider-hover{
+		
+
+	}
 	&__slider-pagination-wrap {
-		margin-top: rem(60);
 
 		z-index: 2;
 		position: relative;
@@ -320,3 +324,53 @@
 	@include media-breakpoint-down(xl) {
 	}
 } // end.sExpert
+
+
+.slider-hover{
+
+	.swiper-button-hand{
+		--swiperBorderColorDef: #08080B;
+		--swiperBgDef: #08080B;
+		--swiperColorDef: #fff;
+
+		--swiperBorderColorDefHover: #08080B;
+		--swiperColorDefHover: #fff;
+		--swiperBgDefHover: #08080B;
+		box-shadow: 0px 8px 42px rgba(99, 111, 128, 0.18);
+		--swiperArrowPosition: calc(-1 * var(--c-g) + 5px); 
+		opacity: 0 ;
+		visibility: hidden;
+		&:hover{
+			box-shadow: 0px 0 0 rgba(99, 111, 128, 0.18);
+		}
+		--swiperArrowSize: #{rem(72)};
+		// width: rem(72);
+		// height: rem(72);
+		.icon{
+			// color: #fff;
+			font-size: rem(32);
+		} 
+	}
+	.swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled{
+		opacity: 0 !important;
+		visibility: hidden !important;
+	}
+	&.show-arrow-hover{
+		&.show-arrow-left{ 
+			.swiper-button-next{
+				opacity: 1 ;
+				visibility: visible;
+				
+			}
+		}
+		
+		&.show-arrow-right{
+			.swiper-button-prev{
+				opacity: 1 !important;
+				visibility: visible;
+				
+			}
+		}
+
+	}
+}
