--- a/sourse/pug/blocks/sTeam/sTeam-js.pug
+++ b/sourse/pug/blocks/sTeam/sTeam-js.pug
@@ -71,6 +71,7 @@ script.
 									myChart.data.datasets[ 0 ].backgroundColor = charColorsGray; 
 								}
 								else { 
+									$(`.sTeam__list-item-inner`).removeClass("hover")
 									myChart.data.datasets[ 0 ].backgroundColor =    charColors; 
 								}
 								myChart.update();
